--- a/src/SQL/nogQueries.yaml
+++ b/src/SQL/nogQueries.yaml
@@ -36,3 +36,433 @@ getListeDiligenceBibliotheque: |
     MND.MyNogD_Controle AS CONTROLE
   from MyNog_DILIGENCE MND
   where MyNogD_Bibliotheque = 'Oui';
+
+verifNogLoad: |
+  select 1 
+  from MyNog_VALEUR_UNIQUE 
+  where MyNogVU_CodeAffaire = @CodeAffaireParam
+
+insertNogCoordonnees: |
+  DECLARE @CodeAffaire VARCHAR(500) = @CodeAffaireParam;
+  DECLARE @NomSociete VARCHAR(500) = @NomSocieteParam;
+  DECLARE @Adresse VARCHAR(500) = @AdresseParam;
+  DECLARE @Siret VARCHAR(500) = @SiretParam;
+  DECLARE @CodeAPE VARCHAR(500) = @CodeAPEParam;
+  DECLARE @LibelleAPE VARCHAR(500) = @LibelleAPEParam;
+
+  IF EXISTS (SELECT 1 FROM MyNog_VALEUR_UNIQUE WHERE MyNogVU_CodeAffaire = @CodeAffaire)
+    BEGIN
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_PRESDOSSIER_NomSociete = @NomSociete
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_PRESDOSSIER_Adresse = @Adresse
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire 
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_PRESDOSSIER_Siret = @Siret
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire 
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_PRESDOSSIER_CodeApe = @CodeAPE
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire 
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_PRESDOSSIER_LibelleApe = @LibelleAPE
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire 
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_PRESDOSSIER_DateLastModifCoordonnees = GETDATE()
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire 
+    END
+  ELSE
+    BEGIN
+      INSERT INTO MyNog_VALEUR_UNIQUE (MyNogVU_CodeAffaire, MyNogVU_PRESDOSSIER_NomSociete, MyNogVU_PRESDOSSIER_Adresse, MyNogVU_PRESDOSSIER_Siret, MyNogVU_PRESDOSSIER_CodeApe, MyNogVU_PRESDOSSIER_LibelleApe, MyNogVU_PRESDOSSIER_DateLastModifCoordonnees)
+      VALUES (@CodeAffaire, @NomSociete, @Adresse, @Siret, @CodeAPE, @LibelleAPE, GETDATE())
+    END;
+
+insertNogContacts: |
+  DECLARE @CodeAffaire VARCHAR(500) = @CodeAffaireParam;
+  DECLARE @Nom VARCHAR(500) = @NomParam;
+  DECLARE @Prenom VARCHAR(500) = @PrenomParam;
+  DECLARE @Fonction VARCHAR(500) = @FonctionParam;
+  DECLARE @Telephone VARCHAR(500) = @TelephoneParam;
+  DECLARE @AdresseMail VARCHAR(500) = @AdresseMailParam;
+
+  INSERT INTO MyNog_PRESDOSSIER_Contact (MyNogPC_CodeAffaire, MyNogPC_Prenom, MyNogPC_Nom, MyNogPC_Fonction, MyNogPC_Telephone, MyNogPC_AdresseMail, MyNogPC_DateLastModif)
+  VALUES (@CodeAffaire, @Prenom, @Nom, @Fonction, @Telephone, @AdresseMail, GETDATE());
+
+deleteNogContacts: |
+  DELETE FROM MyNog_PRESDOSSIER_Contact
+  WHERE MyNogPC_CodeAffaire = @CodeAffaireParam
+
+insertNogAssocies: |
+  DECLARE @CodeAffaire VARCHAR(500) = @CodeAffaireParam;
+  DECLARE @Nom VARCHAR(500) = @NomParam;
+  DECLARE @NbTitres NUMERIC(20,4) = @NbTitresParam;
+  DECLARE @MontantCapital NUMERIC(20,4) = @MontantCapitalParam;
+  DECLARE @PourcDetention NUMERIC(20,4) = @PourcDetentionParam;
+
+  INSERT INTO MyNog_PRESDOSSIER_Associe (MyNogPA_CodeAffaire, MyNogPA_Nom, MyNogPA_NbTitres, MyNogPA_MontantCapital, MyNogPA_PourcDetention, MyNogPA_DateLastModif)
+  VALUES (@CodeAffaire, @Nom, @NbTitres, @MontantCapital, @PourcDetention, GETDATE());
+
+deleteNogAssocies: |
+  DELETE FROM MyNog_PRESDOSSIER_Associe
+  WHERE MyNogPA_CodeAffaire = @CodeAffaireParam;
+
+insertNogCS: |
+  DECLARE @CodeAffaire VARCHAR(500) = @CodeAffaireParam;
+  DECLARE @LibelleExN1 VARCHAR(500) = @LibelleExN1Param;
+  DECLARE @NbMoisExN1 INT = @NbMoisExN1Param;
+  DECLARE @EffectifN1 NUMERIC(20,4) = @EffectifN1Param;
+  DECLARE @CapitauxPropresN1 NUMERIC(20,4) = @CapitauxPropresN1Param;
+  DECLARE @BilanN1 NUMERIC(20,4) = @BilanN1Param;
+  DECLARE @CAN1 NUMERIC(20,4) = @CAN1Param;
+  DECLARE @ResultatNetN1 NUMERIC(20,4) = @ResultatNetN1Param;
+  DECLARE @LibelleExN2 VARCHAR(500) = @LibelleExN2Param;
+  DECLARE @NbMoisExN2 INT = @NbMoisExN2Param;
+  DECLARE @EffectifN2 NUMERIC(20,4) = @EffectifN2Param;
+  DECLARE @CapitauxPropresN2 NUMERIC(20,4) = @CapitauxPropresN2Param;
+  DECLARE @BilanN2 NUMERIC(20,4) = @BilanN2Param;
+  DECLARE @CAN2 NUMERIC(20,4) = @CAN2Param;
+  DECLARE @ResultatNetN2 NUMERIC(20,4) = @ResultatNetN2Param;
+
+  IF EXISTS (SELECT 1 FROM MyNog_VALEUR_UNIQUE WHERE MyNogVU_CodeAffaire = @CodeAffaire)
+    BEGIN
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_PRESDOSSIER_LibelleExN1 = @LibelleExN1
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_PRESDOSSIER_NbMoisExN1 = @NbMoisExN1
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire 
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_PRESDOSSIER_EffectifN1 = @EffectifN1
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire 
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_PRESDOSSIER_CapitauxPropresN1 = @CapitauxPropresN1
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire 
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_PRESDOSSIER_BilanN1 = @BilanN1
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire 
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_PRESDOSSIER_CAN1 = @CAN1
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire 
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_PRESDOSSIER_ResultatNetN1 = @ResultatNetN1
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire 
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_PRESDOSSIER_LibelleExN2 = @LibelleExN2
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_PRESDOSSIER_NbMoisExN2 = @NbMoisExN2
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire 
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_PRESDOSSIER_EffectifN2 = @EffectifN2
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire 
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_PRESDOSSIER_CapitauxPropresN2 = @CapitauxPropresN2
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire 
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_PRESDOSSIER_BilanN2 = @BilanN2
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire 
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_PRESDOSSIER_CAN2 = @CAN2
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire 
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_PRESDOSSIER_ResultatNetN2 = @ResultatNetN2
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire 
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_PRESDOSSIER_DateLastModifChriffresSign = GETDATE()
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire 
+    END
+  ELSE
+    BEGIN
+      INSERT INTO MyNog_VALEUR_UNIQUE (MyNogVU_CodeAffaire, MyNogVU_PRESDOSSIER_LibelleExN1, MyNogVU_PRESDOSSIER_NbMoisExN1, MyNogVU_PRESDOSSIER_EffectifN1, MyNogVU_PRESDOSSIER_CapitauxPropresN1, MyNogVU_PRESDOSSIER_BilanN1, MyNogVU_PRESDOSSIER_CAN1, MyNogVU_PRESDOSSIER_ResultatNetN1, 
+        MyNogVU_PRESDOSSIER_LibelleExN2, MyNogVU_PRESDOSSIER_NbMoisExN2, MyNogVU_PRESDOSSIER_EffectifN2, MyNogVU_PRESDOSSIER_CapitauxPropresN2, MyNogVU_PRESDOSSIER_BilanN2, MyNogVU_PRESDOSSIER_CAN2, MyNogVU_PRESDOSSIER_ResultatNetN2, MyNogVU_PRESDOSSIER_DateLastModifChriffresSign)
+      VALUES (@CodeAffaire, @LibelleExN1, @NbMoisExN1, @EffectifN1, @CapitauxPropresN1, @BilanN1, @CAN1, @ResultatNetN1, @LibelleExN2, @NbMoisExN2, @EffectifN2, @CapitauxPropresN2, @BilanN2, @CAN2, @ResultatNetN2, GETDATE())
+    END;
+
+insertNogTypeMission: |
+  DECLARE @CodeAffaire VARCHAR(500) = @CodeAffaireParam;
+  DECLARE @TypeMission VARCHAR(500) = @TypeMissionParam;
+
+  IF EXISTS (SELECT 1 FROM MyNog_VALEUR_UNIQUE WHERE MyNogVU_CodeAffaire = @CodeAffaire)
+    BEGIN
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_PRESMISSION_TypeMission = @TypeMission
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_PRESMISSION_DateLastModifTypeMission = GETDATE()
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire
+    END
+  ELSE
+    BEGIN
+      INSERT INTO MyNog_VALEUR_UNIQUE (MyNogVU_CodeAffaire, MyNogVU_PRESMISSION_TypeMission, MyNogVU_PRESMISSION_DateLastModifTypeMission)
+      VALUES (@CodeAffaire, @TypeMission, GETDATE())
+    END;
+
+insertNogNatureMission: |
+  DECLARE @CodeAffaire VARCHAR(500) = @CodeAffaireParam;
+  DECLARE @NatureMission VARCHAR(500) = @NatureMissionParam;
+
+  IF EXISTS (SELECT 1 FROM MyNog_VALEUR_UNIQUE WHERE MyNogVU_CodeAffaire = @CodeAffaire)
+    BEGIN
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_PRESMISSION_NatureMission = @NatureMission
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_PRESMISSION_DateLastModifNatureMission = GETDATE()
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire
+    END
+  ELSE
+    BEGIN
+      INSERT INTO MyNog_VALEUR_UNIQUE (MyNogVU_CodeAffaire, MyNogVU_PRESMISSION_NatureMission, MyNogVU_PRESMISSION_DateLastModifNatureMission)
+      VALUES (@CodeAffaire, @NatureMission, GETDATE())
+    END;
+
+insertNogPlanning: |
+  DECLARE @CodeAffaire VARCHAR(500) = @CodeAffaireParam;
+  DECLARE @Fonction VARCHAR(500) = @FonctionParam;
+  DECLARE @Nom VARCHAR(500) = @NomParam;
+  DECLARE @Periode VARCHAR(500) = @PeriodeParam;
+  DECLARE @NbHeures VARCHAR(500) = @NbHeuresParam;
+
+  INSERT INTO MyNog_PRESMISSION_Planning (MyNogPP_CodeAffaire, MyNogPP_Fonction, MyNogPP_Nom, MyNogPP_Periode, MyNogPP_NbHeures, MyNogPP_DateLastModif)
+  VALUES (@CodeAffaire, @Fonction, @Nom, @Periode, @NbHeures, GETDATE());
+
+deleteNogPlanning: |
+  DELETE FROM MyNog_PRESMISSION_Planning
+  WHERE MyNogPP_CodeAffaire = @CodeAffaireParam;
+
+insertNogEquipeInter: |
+  DECLARE @CodeAffaire VARCHAR(500) = @CodeAffaireParam;
+  DECLARE @Fonction VARCHAR(500) = @FonctionParam;
+  DECLARE @Nom VARCHAR(500) = @NomParam;
+  DECLARE @Actif VARCHAR(500) = @ActifParam;
+
+  INSERT INTO MyNog_PRESMISSION_EquipeInter (MyNogPE_CodeAffaire, MyNogPE_Fonction, MyNogPE_Nom, MyNogPE_Actif, MyNogPE_DateLastModif)
+  VALUES (@CodeAffaire, @Fonction, @Nom, @Actif, GETDATE());
+
+deleteNogEquipeInter: |
+  DELETE FROM MyNog_PRESMISSION_EquipeInter
+  WHERE MyNogPE_CodeAffaire = @CodeAffaireParam;
+
+insertNogLogiciel: |
+  DECLARE @CodeAffaire VARCHAR(500) = @CodeAffaireParam;
+  DECLARE @InterneClient VARCHAR(500) = @InterneClientParam;
+  DECLARE @Type VARCHAR(500) = @TypeParam;
+  DECLARE @Outil VARCHAR(500) = @OutilParam;  
+  DECLARE @Cout VARCHAR(500) = @CoutParam;
+
+  INSERT INTO MyNog_ORGAADMINCOMPTA_Logiciel (MyNogOL_CodeAffaire, MyNogOL_InterneClient, MyNogOL_Type, MyNogOL_Outil, MyNogOL_Cout, MyNogOL_DateLastModif)
+  VALUES (@CodeAffaire, @InterneClient, @Type, @Outil, @Cout, GETDATE());
+
+deleteNogLogiciel: |
+  DELETE FROM MyNog_ORGAADMINCOMPTA_Logiciel
+  WHERE MyNogOL_CodeAffaire = @CodeAffaireParam;
+
+insertNogFE: |
+  DECLARE @CodeAffaire VARCHAR(500) = @CodeAffaireParam;
+  DECLARE @Categorie VARCHAR(500) = @CategorieParam;
+  DECLARE @Mission VARCHAR(500) = @MissionParam;
+  DECLARE @Outil VARCHAR(500) = @OutilParam;  
+  DECLARE @BD VARCHAR(500) = @BDParam;
+
+  INSERT INTO MyNog_ORGAADMINCOMPTA_FE (MyNogOF_CodeAffaire, MyNogOF_Categorie, MyNogOF_Mission, MyNogOF_Outil, MyNogOF_BD, MyNogOF_DateLastModif)
+  VALUES (@CodeAffaire, @Categorie, @Mission, @Outil, @BD, GETDATE());
+
+deleteNogFE: |
+  DELETE FROM MyNog_ORGAADMINCOMPTA_FE
+  WHERE MyNogOF_CodeAffaire = @CodeAffaireParam;
+
+insertNogFEUnique: |
+  DECLARE @CodeAffaire VARCHAR(500) = @CodeAffaireParam;
+  DECLARE @EInvoicing VARCHAR(500) = @EInvoicingParam;
+  DECLARE @EReportingPaiement VARCHAR(500) = @EReportingPaiementParam;
+  DECLARE @EReportingTransaction VARCHAR(500) = @EReportingTransactionParam;
+  DECLARE @CasGestion VARCHAR(500) = @CasGestionParam;
+  DECLARE @EnvoiMail VARCHAR(500) = @EnvoiMailParam;
+  DECLARE @SignatureMandat VARCHAR(500) = @SignatureMandatParam;
+
+  IF EXISTS (SELECT 1 FROM MyNog_VALEUR_UNIQUE WHERE MyNogVU_CodeAffaire = @CodeAffaire)
+    BEGIN
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_ORGAADMINCOMPTA_EInvoicing = @EInvoicing
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire  
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_ORGAADMINCOMPTA_EReportingPaiement = @EReportingPaiement
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_ORGAADMINCOMPTA_EReportingTransaction = @EReportingTransaction
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_ORGAADMINCOMPTA_CasGestion = @CasGestion
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire  
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_ORGAADMINCOMPTA_MailEnvoiClient = @EnvoiMail
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_ORGAADMINCOMPTA_SignatureMandat = @SignatureMandat
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_ORGAADMINCOMPTA_DateLastModifFE = GETDATE()
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire
+    END
+  ELSE
+    BEGIN
+      INSERT INTO MyNog_VALEUR_UNIQUE (MyNogVU_CodeAffaire, MyNogVU_ORGAADMINCOMPTA_EInvoicing, MyNogVU_ORGAADMINCOMPTA_EReportingPaiement, MyNogVU_ORGAADMINCOMPTA_EReportingTransaction,
+      MyNogVU_ORGAADMINCOMPTA_CasGestion, MyNogVU_ORGAADMINCOMPTA_MailEnvoiClient, MyNogVU_ORGAADMINCOMPTA_SignatureMandat, MyNogVU_ORGAADMINCOMPTA_DateLastModifFE)
+      VALUES (@CodeAffaire, @EInvoicing, @EReportingPaiement, @EReportingTransaction, @CasGestion, @EnvoiMail, @SignatureMandat, GETDATE())
+    END;
+
+insertNogVigilance: |
+  DECLARE @CodeAffaire VARCHAR(500) = @CodeAffaireParam;
+  DECLARE @Vigilance VARCHAR(500) = @VigilanceParam;
+
+  IF EXISTS (SELECT 1 FROM MyNog_VALEUR_UNIQUE WHERE MyNogVU_CodeAffaire = @CodeAffaire)
+    BEGIN
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_ZONERISQUE_Vigilance = @Vigilance
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET MyNogVU_ZONERISQUE_DateLastModifVigilance = GETDATE()
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire
+    END
+  ELSE
+    BEGIN
+      INSERT INTO MyNog_VALEUR_UNIQUE (MyNogVU_CodeAffaire, MyNogVU_ZONERISQUE_Vigilance, MyNogVU_ZONERISQUE_DateLastModifVigilance)
+      VALUES (@CodeAffaire, @Vigilance, GETDATE())
+    END;
+
+insertNogDiligence: |
+  DECLARE @CodeAffaire VARCHAR(500) = @CodeAffaireParam;
+  DECLARE @Cycle VARCHAR(500) = @CycleParam;
+  DECLARE @CycleLibelle VARCHAR(500) = @CycleLibelleParam;
+  DECLARE @CodeDiligence VARCHAR(500) = @CodeDiligenceParam;
+  DECLARE @TitreDiligence VARCHAR(500) = @TitreDiligenceParam;  
+  DECLARE @Activation VARCHAR(500) = @ActivationParam;
+  DECLARE @Objectif VARCHAR(max) = @ObjectifParam;
+  DECLARE @Controle VARCHAR(max) = @ControleParam;
+
+  INSERT INTO MyNog_DILIGENCE_ListeDiligence (MyNogDL_CodeAffaire, MyNogDL_Cycle, MyNogDL_CycleLibelle, MyNogDL_CodeDiligence, MyNogDL_TitreDiligence, MyNogDL_Activation, 
+    MyNogDL_Objectif, MyNogDL_Controle, MyNogDL_DateLastModif)
+  VALUES (@CodeAffaire, @Cycle, @CycleLibelle, @CodeDiligence, @TitreDiligence, @Activation, @Objectif, @Controle, GETDATE());
+
+deleteNogDiligence: |
+  DELETE FROM MyNog_DILIGENCE_ListeDiligence
+  WHERE MyNogDL_CodeAffaire = @CodeAffaireParam;
+
+insertNogModuleTexte: |
+  DECLARE @CodeAffaire VARCHAR(500) = @CodeAffaireParam;
+  DECLARE @Texte VARCHAR(max) = @TexteParam;
+
+  IF EXISTS (SELECT 1 FROM MyNog_VALEUR_UNIQUE WHERE MyNogVU_CodeAffaire = @CodeAffaire)
+    BEGIN
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET @ColonneParam = @Texte
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET @ColonneDateParam = GETDATE()
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire
+    END
+  ELSE
+    BEGIN
+      INSERT INTO MyNog_VALEUR_UNIQUE (MyNogVU_CodeAffaire, @ColonneParam, @ColonneDateParam)
+      VALUES (@CodeAffaire, @Texte, GETDATE())
+    END;
+
+insertNogValue: |
+  DECLARE @CodeAffaire VARCHAR(500) = @CodeAffaireParam;
+  DECLARE @Value VARCHAR(500) = @ValueParam;
+
+  IF EXISTS (SELECT 1 FROM MyNog_VALEUR_UNIQUE WHERE MyNogVU_CodeAffaire = @CodeAffaire)
+    BEGIN
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET @ColonneParam = @Value
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire
+
+      UPDATE MyNog_VALEUR_UNIQUE
+      SET @ColonneDateParam = GETDATE()
+      WHERE MyNogVU_CodeAffaire = @CodeAffaire
+    END
+  ELSE
+    BEGIN
+      INSERT INTO MyNog_VALEUR_UNIQUE (MyNogVU_CodeAffaire, @ColonneParam, @ColonneDateParam)
+      VALUES (@CodeAffaire, @Value, GETDATE())
+    END;
+
+insertNogFileAnnexe: |
+  declare @str varchar(max);
+  declare @bin varbinary(max);
+  DECLARE @CodeAffaire VARCHAR(500) = @CodeAffaireParam;
+
+  set @str = @FileParam;
+  set @bin = (select cast(N'' as xml).value('xs:base64Binary(sql:variable("@str"))', 'varbinary(max)'));
+
+  insert into MyNog_ANNEXE_FichierAnnexe (MyNogAFA_CodeAffaire, MyNogAFA_Titre, MyNogAFA_File, MyNogAFA_ROWGUID, MyNogAFA_Order, MyNogAFA_DateLastModif) 
+  values (@CodeAffaire, @TitreParam, @bin, NEWID(), @OrderParam, getdate());
+
+deleteNogFileAnnexe: |
+  DELETE FROM MyNog_ANNEXE_FichierAnnexe
+  WHERE MyNogAFA_CodeAffaire = @CodeAffaireParam;
+
+insertNogDiligenceAdd: |
+  DECLARE @CodeAffaire VARCHAR(500) = @CodeAffaireParam;
+  DECLARE @Cycle VARCHAR(500) = @CycleParam;
+  DECLARE @CodeDiligence VARCHAR(500) = @CodeDiligenceParam;
+  DECLARE @TitreDiligence VARCHAR(500) = @TitreDiligenceParam;  
+  DECLARE @Objectif VARCHAR(max) = @ObjectifParam;
+  DECLARE @Controle VARCHAR(max) = @ControleParam;
+
+  INSERT INTO MyNog_DILIGENCE_ListeDiligenceAdd (MyNogDLA_CodeAffaire, MyNogDLA_Cycle, MyNogDLA_CodeDiligence, MyNogDLA_TitreDiligence,
+    MyNogDLA_Objectif, MyNogDLA_Controle, MyNogDLA_DateLastModif)
+  VALUES (@CodeAffaire, @Cycle, @CodeDiligence, @TitreDiligence, @Objectif, @Controle, GETDATE());
+
+deleteNogDiligenceAdd: |
+  DELETE FROM MyNog_DILIGENCE_ListeDiligenceAdd
+  WHERE MyNogDLA_CodeAffaire = @CodeAffaireParam;
+
+insertNogDiligenceLab: |
+  DECLARE @CodeAffaire VARCHAR(500) = @CodeAffaireParam;
+  DECLARE @Cycle VARCHAR(500) = @CycleParam;
+  DECLARE @CycleLibelle VARCHAR(500) = @CycleLibelleParam;
+  DECLARE @CodeDiligence VARCHAR(500) = @CodeDiligenceParam;
+  DECLARE @TitreDiligence VARCHAR(500) = @TitreDiligenceParam;  
+  DECLARE @Activation VARCHAR(500) = @ActivationParam;
+  DECLARE @Objectif VARCHAR(max) = @ObjectifParam;
+  DECLARE @Controle VARCHAR(max) = @ControleParam;
+
+  INSERT INTO MyNog_DILIGENCE_ListeDiligenceLab (MyNogDLL_CodeAffaire, MyNogDLL_Cycle, MyNogDLL_CycleLibelle, MyNogDLL_CodeDiligence, MyNogDLL_TitreDiligence, MyNogDLL_Activation, 
+    MyNogDLL_Objectif, MyNogDLL_Controle, MyNogDLL_DateLastModif)
+  VALUES (@CodeAffaire, @Cycle, @CycleLibelle, @CodeDiligence, @TitreDiligence, @Activation, @Objectif, @Controle, GETDATE());
+
+deleteNogDiligenceLab: |
+  DELETE FROM MyNog_DILIGENCE_ListeDiligenceLab
+  WHERE MyNogDLL_CodeAffaire = @CodeAffaireParam;
+
+
