--- a/src/SQL/missionQueries.yaml
+++ b/src/SQL/missionQueries.yaml
@@ -140,7 +140,8 @@ getAllMissionAccessModuleEditor: |
         MD.MD_MISSION,
         MD.MD_MILLESIME,
         MD.LIBELLE_MISSIONS,
-        MD.CODE_AFFAIRE
+        MD.CODE_AFFAIRE,
+        LDM.DTMISS_ProfilMyJourney AS PROFIL
     FROM MyModuleAffichage LDM
     LEFT JOIN ref_MISSION_DOSSIER MD  ON MD.CODE_AFFAIRE = LDM.DTMISS_MissionId
     LEFT JOIN ref_DOSSIER D       ON D.DOS_PGI = MD.DOS_PGI
