--- a/src/SQL/fileQueries.yaml
+++ b/src/SQL/fileQueries.yaml
@@ -102,6 +102,7 @@ getModuleFilesMission: |
       MODFILE_MissionId, 
       MODFILE_DateExpiration, 
       MODFILE_TITLE,
+      MODFILE_DateFichier,
       CAST(N'' AS xml).value('xs:base64Binary(xs:hexBinary(sql:column("MODFILE_File")))', 'varchar(max)') AS Base64_File,
       MODFILE_Id,
       MODFILE_FileCategorie
@@ -118,6 +119,7 @@ getModuleFilesMission: |
     LF.MODFILE_MissionId, 
     LF.MODFILE_DateExpiration, 
     LF.MODFILE_TITLE,
+    LF.MODFILE_DateFichier, 
     LF.Base64_File,
     LF.MODFILE_Id,
     LF.MODFILE_FileCategorie
@@ -136,6 +138,7 @@ getModuleFilesDossier: |
       MODFILE_MissionId, 
       MODFILE_DateExpiration, 
       MODFILE_TITLE,
+      MODFILE_DateFichier,
       CAST(N'' AS xml).value('xs:base64Binary(xs:hexBinary(sql:column("MODFILE_File")))', 'varchar(max)') AS Base64_File,
       MODFILE_Id,
       MODFILE_FileCategorie
@@ -152,6 +155,7 @@ getModuleFilesDossier: |
     LF.MODFILE_MissionId, 
     LF.MODFILE_DateExpiration, 
     LF.MODFILE_TITLE,
+    LF.MODFILE_DateFichier, 
     LF.Base64_File,
     LF.MODFILE_Id,
     LF.MODFILE_FileCategorie
@@ -170,6 +174,7 @@ getModuleFilesGroupe: |
       MODFILE_MissionId, 
       MODFILE_DateExpiration, 
       MODFILE_TITLE,
+      MODFILE_DateFichier,
       CAST(N'' AS xml).value('xs:base64Binary(xs:hexBinary(sql:column("MODFILE_File")))', 'varchar(max)') AS Base64_File,
       MODFILE_Id,
       MODFILE_FileCategorie
@@ -186,6 +191,7 @@ getModuleFilesGroupe: |
     LF.MODFILE_MissionId, 
     LF.MODFILE_DateExpiration, 
     LF.MODFILE_TITLE,
+    LF.MODFILE_DateFichier, 
     LF.Base64_File,
     LF.MODFILE_Id,
     LF.MODFILE_FileCategorie
@@ -197,4 +203,9 @@ getModuleFilesGroupe: |
 deleteModuleFile: |
   UPDATE MODULE_FILE
   SET MODFILE_Etat = 'delete'
+  WHERE MODFILE_Id = @FileIdParam
+
+setDateFichierModuleFile: |
+  UPDATE MODULE_FILE
+  SET MODFILE_DateFichier = @DateFichierParam
   WHERE MODFILE_Id = @FileIdParam
